[project]
name = "health-systems-kg"
version = "0.1.0"
description = "Health systems knowledge graph — WHO SPAR, NHWA, GAVI, Global Fund, IHME on Samyama"
requires-python = ">=3.10"
dependencies = [
    "samyama>=0.6.0",
    "requests>=2.31",
    "rich>=13.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["etl*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
